tests/baselines/reference/decoratorReferences(strict=true).errors.txt
decoratorReferences.ts(6,12): error TS7006: Parameter 'x' implicitly has an 'any' type.
decoratorReferences.ts(6,18): error TS7006: Parameter 'y' implicitly has an 'any' type.


==== decoratorReferences.ts (2 errors) ====
    declare function y(...args: any[]): any;
    type T = number;
    @y(1 as T, () => C) // <-- T should be resolved to the type alias, not the type parameter of the class; C should resolve to the class
    class C<T> {
        @y(null as T) // <-- y should resolve to the function declaration, not the parameter; T should resolve to the type parameter of the class
        method(@y x, y) {} // <-- decorator y should be resolved at the class declaration, not the parameter.
               ~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                     ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
    }